# V2---Gnosis

./: .env.example  .gitignore  =0.9.0  ALPACA_INTEGRATION.md  ALPACA_INTEGRATION_COMPLETE.md  ALPACA_SETUP.md  ARCHITECTURE_OVERVIEW.md  ARCHITECTURE_REPORT.md  BACKTEST_ENGINE_V3_IMPLEMENTATION.md  CI_FIX_REQUIRED.md  CI_WORKFLOW_MANUAL_FIX.md  COMPLETE_INTEGRATION_SUMMARY.md  CURRENT_MONITORING_STATUS.md  DATA_INTEGRATION_COMPLETE.md  DATA_REQUIREMENTS.md  DECISION_FLOW.md  DELIVERABLES.txt  DEV_GUIDE.md  DIAGNOSTIC_RESULTS.md  Dockerfile  ELASTICITY_ENGINE_V3_IMPLEMENTATION.md  FINAL_CI_FIX.md  FINAL_COMPLETION_SUMMARY.md  FINAL_SUMMARY.md  FREE_DATA_SOURCES.md  GITHUB.md  HEDGE_ENGINE_V3_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS.md  INDEX.md  INTEGRATION_COMPLETE.md  LIQUIDITY_ENGINE_V3_IMPLEMENTATION.md  LIVE_TRADING.md  MAINTENANCE.md  MEMORY_INTEGRATION_GUIDE.md  MEMORY_INTEGRATION_PLAN.md  MEMORY_SYSTEM.md  MIGRATION_COMPLETE.md  MILESTONE_ACHIEVED.md  (+91 more)
agents/: __init__.py  base.py  hedge_agent_v3.py  liquidity_agent_v1.py  sentiment_agent_v1.py  trade_agent_v1.py
api/: __init__.py  app.py  composer_service.py  schemas_composer.py  trade_agent_service.py
backtest/: runner.py
backtesting/: __init__.py  composer_backtest.py  metrics.py
benchmarks/: benchmark_suite.py
config/: __init__.py  config.yaml  config_models.py  hedge_agent_config.yaml  liquidity_agent_config.yaml  loader.py  sentiment_agent_config.yaml  unusual_whales_config.py  watchlist.yaml
data_l1/: l1_2024-10-01.parquet  l1_2025-10-24.parquet  (+6 more)
(+488 files in other folders)
